--- a/landing.css
+++ b/landing.css
@@ -33,9 +33,9 @@ hr{
     border-radius: 1000px;
     background-color: rgb(129, 218, 221);
     border-color:rgb(129, 218, 221) ;
-    padding: 12px 30px;
+    padding: 30px 40px;
     text-transform: uppercase;
-    
+    font-size: x-large;
 }
 .btn-primary:hover{
     background-color: rgb(96, 171, 173);
